# CPP_Exercises

./: CMakeLists.txt
TP1/: CMakeLists.txt  helloworld.cpp
src/: Kid.hpp  Kitchen.cpp  Kitchen.hpp  Plush.hpp  PlushStore.hpp  image.hpp  pixels.hpp
